--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
-
+*.python linguist-detectable
+*.js linguist-detectable=false
+*.css linguist-detectable=false
+*.html linguist-detectable=false
+*.ipynb linguist-vendored
